tests/should_fail/type_string_mul_int.nv
module main

// SHOULD FAIL: multiply String * Int (no __mul__ defined)
fn test() -> String {
    return "hello" * 3
}
println(test())
